--- a/css/style.css
+++ b/css/style.css
@@ -136,30 +136,45 @@
     object-fit: contain;
 }
 /* calculators */
+.calculators-title{
+    margin: 2rem .5rem 0 .5rem;
+    font-size: 1.8em;
+    letter-spacing: -.5px;
+    font-weight: 700;
+    line-height: 2rem;
+    max-width: 20rem;
+}
+.calculators-description{
+    font-size: .85em;
+    margin: 1rem 1rem 2rem .5rem;
+    max-width: 20rem;
+}
 .calculators-container{
     background-color: var(--dark-color);
     color: #fff;
-    width: 90%;
-    padding: 1rem .5rem 1rem .5rem;
-    margin: 2rem auto;
+    padding: 1rem .5rem 0 .5rem;
+    margin: 2rem .5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+.btns-show-container{
+    width: 100%;
+}
 .btn-show-calulator{
     width: 95%;
     padding: .45rem;
-    margin: .3rem 0;
+    margin: .5rem auto;
     font-size: .85em;
     border-radius: 1rem;
     font-weight: 700;
-    text-align: start;
     color: var(--light-color);
     border: 1px solid var(--light-color);
     background-color: transparent;
     transition: .2s ease-in;
     text-align: center;
+    cursor: pointer;
 }
 .btn-calc-active{
     border: transparent;
@@ -193,39 +208,87 @@ input::placeholder{
     font-size: .95em;
     font-weight: 700;
 }
-label, select{
-    margin: 1rem;
-}
-select {
-    outline: none;
-    color: var(--dark-color);
-    background: #fff;
-}
 .btn-calculate{
-    width: 80%;
-    margin: auto;
+    width: 85%;
+    margin: 2rem auto 0 auto;
     padding: .8rem;
     border-radius: 2rem;
     background-color: var(--first-color);
     color: var(--dark-color);
     font-weight: 700;
     font-size: .85em;
+    cursor: pointer;
 }
 #errorTraffic, #errorWork, #errorDismissal {
     color: #bb0000;
     font-size: .9em;
-    margin: 1rem 1rem 0 1rem;
+    margin: 1.5rem .5rem 0rem .5rem;
     text-align: center
 }
 #resultTraffic, #resultWork, #resultDismissal{
-    margin: 2rem 1rem 0 1rem;
+    margin: 1.5rem .5rem 0 .5rem;
     text-align: center;
     font-size: .95em;
     color: var(--first-color);
     font-weight: 700;
     border-radius: .4rem;
 }
-
+.inputs-dismissal{
+    margin: .5rem 0;
+    padding: 0;
+    letter-spacing: -.5px;
+}
+.dismissal-label, .title-radio{
+    font-size: .9em;
+    color: #e6e6e6;
+    margin: -.625rem 1rem;
+}
+.inputs-dismissal > input{
+    margin-bottom: 1.5rem;
+}
+.radio-container{
+    margin: 1rem 0;
+}
+.radio-container > label {
+    width: 10rem;
+    padding: 0;
+    font-size: .9em;
+    margin: 0 0 .7rem 0;
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    cursor: pointer;
+}
+.input-radio{
+    position: relative;
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-left: 1rem;
+    background-color: var(--light-color);
+    border-radius: 50%;
+}
+.input-radio::after{
+    content: '';
+    position: absolute;
+    width: 1.1rem;
+    height: 1.1rem;
+    background-color: var(--first-color);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border-radius: 50%;
+    opacity: 0;  
+}
+input[type=radio]{
+    display: none;
+}
+input[type=radio]:checked + label .input-radio::after{
+    opacity: 1;
+}
+input[type=radio]:checked + label{
+    font-weight: 700;
+}
 @media (min-width: 21rem) {
     .header{
         padding: .5rem .8rem;
@@ -271,6 +334,29 @@ select {
     .services-card-p{
         font-size: .88em;
     }
+    .btn-show-calulator{
+        padding: .55rem;
+    }
+    .radio-container > label {
+        margin: 0 0 1rem 0;
+    }
+    /* calculators */
+    .calculators-title{
+        margin: 3rem .8rem 0 .8rem;
+        font-size: 2em;
+        line-height: 2.2rem;
+    }
+    .calculators-description{
+        font-size: .85em;
+        margin: 1rem 1rem 3rem .8rem;
+    }
+    .calculators-container{
+        margin: 2rem .8rem;
+    }
+    .btn-show-calulator{
+        padding: .55rem;
+        margin: .7rem auto;
+    }
 }
 @media (min-width: 25rem) {
     .header{
@@ -298,6 +384,25 @@ select {
     .home-image{
         padding-top: 3rem;
         height: 52vh;
+    }
+    .btn-show-calulator{
+        margin: .8rem;
+        padding: .6rem;
+    }
+    .calculators-title{
+        margin: 3rem 1rem 0 1rem;
+        font-size: 2.4em;
+        line-height: 2.6rem;
+    }
+    .calculators-description{
+        font-size: .9em;
+        margin: 1.5rem 1rem 3rem 1rem;
+    }
+    .calculators-container{
+        margin: 2rem 1rem;
+    }
+    .calculators-container{
+        margin: 2rem 1rem;
     }
 }
 @media (min-width: 36rem) {
@@ -328,10 +433,24 @@ select {
         gap: .8rem;
         font-size: 2.8em;
     }
+    .btn-show-calulator{
+        padding: .65rem;
+    }
+    .calculators-title{
+        margin: 3rem 1.5rem 0 1.5rem;
+    }
+    .calculators-description{
+        font-size: .95em;
+        margin: 1.5rem 1.5rem 3rem 1.5rem;
+        max-width: 30rem;
+    }
+    .calculators-container{
+        margin: 2rem 1.5rem;
+    }
 }
 @media (min-width: 50rem) {
     .header{
-        padding: .4rem 3rem;
+        padding: .4rem 2rem;
     }
     .header-hamburger,
     .header-close {
@@ -350,18 +469,19 @@ select {
         align-items: start;
         font-size: 1.1em;
         gap: 1rem;
+        margin-right: -.5rem;
     }
     .nav-link{
         padding: .3rem .7rem;
         transition: .7s;
-        border-radius: 7px;
+        border-radius: .4375rem;
     }
     .nav-link:hover{
         filter: invert(70%);
     }
     /* home */
     .home{
-        margin: 1.5rem 3rem 0 3rem;
+        margin: 1.5rem 2rem 0 2rem;
     }
     .home-title{
         max-width: 35rem;
@@ -398,17 +518,74 @@ select {
     .services-card-p{
         font-size: .9em;
     }
+    /* calculators */
+    .calculators-title{
+        margin: 3rem 2rem 0 2rem;
+    }
+    .calculators-description{
+        margin: 1.5rem 2rem 3rem 2rem;
+    }
+    .calculators-container{
+        margin: 2rem 2rem;
+    }
+    .btns-show-container{
+        width: unset;
+        display: flex;
+        justify-content: center;
+        margin: 1rem 2rem 2rem 2rem;
+    }
+    .btn-show-calulator{
+        width: 15rem;
+        padding: .5rem 1.2rem;
+        margin: .3rem .3rem;
+        font-size: .9em;
+    }
+    .inputs-dismissal, .container-inputs {
+        display: flex;
+        gap: 1rem;
+        margin: 0 0 2rem 0;
+    }
+    input{
+        width: 13rem;
+        margin: 0;
+        font-size: .9em;
+    }
+    .btn-calculate{
+        width: 16rem;
+        padding: .8rem;
+    }
+    .title-radio{
+        display: flex;
+        justify-content: center;
+        font-size: 1em;
+    }
+    .radio-container{
+        display: flex;
+        justify-content: center;
+    }
+    .radio-container > label{
+        width: auto;
+        margin: 0;
+        padding: 1rem;
+    }
+    .input-radio{
+        margin: 0;
+    }
+    .dismissal-label{
+        font-size: .95em;
+        margin: 0 auto 1rem auto;
+    }
 }
-@media (min-width: 70rem) {
+@media (min-width: 63rem) {
     .header{
-        padding: .4rem 2rem;
+        padding: .5rem 1.5rem;
     }
     .header-list {
         font-size: 1.1em;
         color: #343434;
     }
     .home{
-        margin: 2.5rem 2rem 0 2rem;
+        margin: 2.5rem 1.5rem 0 1.5rem;
     }
     .home-info{
         display: flex;
@@ -417,17 +594,17 @@ select {
     }
     .home-title{
         max-width: 32rem;
-        font-size: 3.5em;
-        line-height: 3.5rem;
+        font-size: 3.2em;
+        line-height: 3.3rem;
     }
     .home-description{
-        max-width: 28rem;
+        max-width: 25rem;
         padding-bottom: 1.5rem;
-        font-size: 1.05em;
+        font-size: .95em;
     }
     .home-btn{
-        padding: 1rem 1.8rem;
-        font-size: 1.1em;
+        padding: .8rem 1.8rem;
+        font-size: 1em;
     }
     .home-image{
         padding-top: 6rem;
@@ -444,16 +621,46 @@ select {
         padding: 0 0 0 8rem;
     }
     .services{
+        max-width: 75rem;
         margin: auto;
-        max-width: 80rem;
-        gap: 2rem;
     }
     .services-card{
-        width: 20rem;
+        width: 19rem;
         height: 25rem;
     }
     .services-card-p{
         width: 16rem;
+    }
+    /* calculators */
+    .calculators-title{
+        margin: 3rem 1.5rem 0 1.5rem;
+        font-size: 2.8em;
+        line-height: 3rem;
+    }
+    .calculators-description{
+        margin: 1.5rem 1.5rem 3rem 1.5rem;
+        font-size: 1em;
+    }
+    .calculators-container{
+        margin: 2rem 1.5rem;
+    }
+    .btn-show-calulator{
+        width: 17rem;
+        margin: .3rem 1rem;
+    }
+    .inputs-dismissal, .container-inputs {
+        gap: 2rem;
+        margin: 0 0 3rem 0;
+    }
+    input{
+        width: 16rem;
+        margin: 0;
+        font-size: .9em;
+    }
+    .btn-calculate{
+        width: 18rem;
+        padding: .9rem 1rem;
+        font-size: .9em;
     }
 }
 @media (min-width: 90rem) {
@@ -464,8 +671,11 @@ select {
         margin: 4rem;
         margin-bottom: 0;
     }
-    .home-btn{
-        padding: 1rem 2rem;
+    .home-title{
+        font-size: 3.5em;
+        line-height: 3.5rem;
+    }
+    .home-description{
         font-size: 1em;
     }
     .home-image{
@@ -474,5 +684,42 @@ select {
     }
     .services-title{
         margin: 4rem;
+    }
+    .services{
+        gap: 2rem;
+    }
+    .services-card{
+        width: 20rem;
+    }
+    .services-card-p{
+        width: 16rem;
+    }
+    .calculators-title{
+        margin: 4rem 4rem 0 4rem;
+        font-size: 2.8em;
+        line-height: 3rem;
+    }
+    .calculators-description{
+        margin: 1.5rem 4rem 4rem 4rem;
+        font-size: 1.05em;
+    }
+    .btn-show-calulator{
+        width: 18rem;
+        padding: .6rem 3rem;
+    }
+    .calculators-container{
+        margin: 2rem 4rem;
+    }
+    .inputs-dismissal, .container-inputs {
+        gap: 2rem;
+    }
+    input{
+        width: 19rem;
+    }
+    .btn-calculate{
+        width: 20rem;
+    }    
+    input[type=date]::-webkit-calendar-picker-indicator {
+        font-size: 1.2rem;
     }
 }
