--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@
     width: 100%;
     object-fit: contain;
 }
-/* titles calculator about */
+/* calculators */
 .calculators-title{
     margin: 1rem .5rem 0 .5rem;
     font-size: 1.8em;
@@ -149,7 +149,6 @@
     line-height: 2rem;
     max-width: 20rem;
 }
-/* calculators */
 .calculators-description{
     font-size: .85em;
     margin: 1rem 1rem 2rem .5rem;
@@ -342,34 +341,34 @@ input[type=radio]:checked + label{
 .description-strong{
     color: var(--dark-color);
 }
-.lawer-card{
+.lawyer-card{
     margin: 0 .5rem 3rem .5rem;
 }
-.lawer-card-img{
+.lawyer-card-img{
     height: 19rem;
     width: 100%;
     object-fit: cover;
     filter: grayscale(95%);
 }
-.lawer-card-name{
+.lawyer-card-name{
     font-weight: 700;
     font-size: 1.1em;
     margin: .5rem 0;
 }
-.lawer-card-list{
+.lawyer-card-list{
     font-size: .85em;
     margin-top: 1rem; 
 }
-.lawer-card-list > li{
+.lawyer-card-list > li{
     list-style: disc;
     margin: .5rem .5rem .5rem 1rem;
 }
-.lawer-card-h4{
+.lawyer-card-h4{
     font-weight: 700;
     font-size: .95em;
     margin-bottom: .5rem;
 }
-.lawer-card-p{
+.lawyer-card-p{
     font-size: .85em;
     line-height: 1rem;
 }
@@ -379,7 +378,7 @@ input[type=radio]:checked + label{
     letter-spacing: -.5px;
 }
 .testimonials-span{
-    margin-top: 2rem;
+    margin-top: 1rem;
     padding: .2rem .5rem;
     background-color: var(--first-color);
     display: inline-block;
@@ -392,7 +391,7 @@ input[type=radio]:checked + label{
 .testimonials{
     overflow-x: hidden;
     display: flex;
-    margin: 2rem 0;
+    padding: 2rem 0 3rem 0;
     scroll-behavior: smooth;
 }
 .testimonials.dragging-slider{
@@ -407,12 +406,11 @@ input[type=radio]:checked + label{
     height: 2.3rem;
     width: 2.3rem;
     position: absolute;
-    top: 100%;
+    top: 97.5%;
     background-color: #fff;
     color: var(--dark-color);
     text-align: center;
     border-radius: 50%;
-    transform: translateY(-40%);
     cursor: pointer;
     box-shadow: 6px 9px 23px -7px rgba(0,0,0,0.45);
     -webkit-box-shadow: 6px 9px 23px -7px rgba(0,0,0,0.45);
@@ -480,6 +478,56 @@ input[type=radio]:checked + label{
 .google-icon{
     width: 2rem;
     height: 2rem;
+}
+/* footer */
+.footer-title, .footer-map{
+    padding: .5rem;
+}
+.footer-title{
+    font-size: 1.4em;
+    font-weight: 700;
+}
+.footer-map{
+    width: 100%;
+    height: 19rem;
+}
+.footer-info{
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    padding: 1rem .5rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+.footer-h3{
+    font-size: 1.05em;
+    font-weight: 700;
+    color: var(--first-color);
+}
+.footer-phone, .footer-mail, .footer-social{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: .3rem;
+    column-gap: .7rem;
+    font-size: .95em;
+    letter-spacing: -.1px;
+}
+.footer-location{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: .3rem;
+    column-gap: .5rem;
+    font-size: .95em;
+    letter-spacing: -.1px;
+}
+.footer-phone > svg, .footer-mail > svg, .footer-social > svg {
+    width: 1rem;
+}
+.footer-location > svg{
+    width: 2rem;
+    height: 1.5rem;
 }
 @media (min-width: 21rem) {
     .header{
@@ -577,20 +625,20 @@ input[type=radio]:checked + label{
         font-size: 1.4em;
         line-height: 1.7rem;
     }
-    .lawer-card{
+    .lawyer-card{
         margin: 0 .8rem 3rem .8rem;
     }
-    .lawer-card-img{
+    .lawyer-card-img{
         height: 24rem;
     }
-    .lawer-card-name{
+    .lawyer-card-name{
         font-size: 1.15em;
     }
-    .lawer-card-list{
+    .lawyer-card-list{
         font-size: .9em;
     }
-    .lawer-card-list > li{
-        margin: .5rem .8rem .5rem 1rem;
+    .lawyer-card-list > li{
+        margin: .8rem .8rem .8rem 1.5rem;
     }
     /* testimonials */
     .testimonials-title, .testimonials-span{
@@ -633,6 +681,31 @@ input[type=radio]:checked + label{
     .testimonial-footer{
         gap: .8rem;
         font-size: .9em;
+    }
+    /* footer */
+    .footer-title, .footer-map{
+        padding: .5rem .8rem;
+    }
+    .footer-title{
+        font-size: 1.5rem;
+    }
+    .footer-info{
+        padding: 1.1rem .8rem;
+        row-gap: 1.1rem;
+    }
+    .footer-h3{
+        font-size: 1.1em;
+    }
+    .footer-phone, .footer-mail, .footer-social{
+        margin-top: .4rem;
+        column-gap: .8rem;
+        font-size: 1em;
+    }
+    .footer-phone > svg, .footer-mail > svg, .footer-social > svg {
+        width: 1.1rem;
+    }
+    .footer-location > svg{
+        width: 1.8rem;
     }
 }
 @media (min-width: 25rem) {
@@ -695,23 +768,27 @@ input[type=radio]:checked + label{
         font-size: 1.5em;
         line-height: 1.8rem;
     }
-    .lawer-card{
+    .lawyer-card{
         margin: 0 1rem 3rem 1rem;
     }
-    .lawer-card-img{
+    .lawyer-card-img{
         height: 28rem;
     }
-    .lawer-card-name{
+    .lawyer-card-name{
         font-size: 1.15em;
     }
-    .lawer-card-list{
+    .lawyer-card-list{
         font-size: .9em;
     }
-    .lawer-card-list > li{
-        margin: .8rem 1rem .5rem 1rem;
+    .lawyer-card-list > li{
+        margin: .8rem 1rem .8rem 1.5rem;
     }
-    .lawer-card-h4{
-        margin-bottom: .8rem;
+    .lawyer-card-h4{
+        margin: 0 1rem .8rem .5rem;
+    }
+    .lawyer-card-p{
+        width: 23rem;
+        margin-left: .5rem;
     }
     .testimonials-title, .testimonials-span{
         margin: 0 1rem;
@@ -731,6 +808,14 @@ input[type=radio]:checked + label{
     }
     .arrow-slider:last-child{
         right: 38%;
+    }
+    /* footer */
+    .footer-title, .footer-map{
+        padding: .8rem 1rem;
+        font-size: 1.6rem;
+    }
+    .footer-info{
+        padding: 1.1rem 1rem;
     }
 }
 @media (min-width: 36rem) {
@@ -788,30 +873,33 @@ input[type=radio]:checked + label{
         line-height: 1.8rem;
         max-width: 33rem;
     }
-    .lawer-card{
+    .lawyer-card{
         margin: 0 1.5rem 3rem 1.5rem;
     }
-    .lawer-card-img{
+    .lawyer-card-img{
         height: 32rem;
         width: 80%;
         margin: auto;
     }
-    .lawer-card-name{
+    .lawyer-card-name{
         font-size: 1.2em;
         width: 80%;
         margin: auto;
     }
-    .lawer-card-list{
+    .lawyer-card-list{
         font-size: .9em;
         width: 80%;
         margin: auto;
     }
-    .lawer-card-list > li{
+    .lawyer-card-list > li{
         margin: .8rem 1.5rem .5rem 1.5rem;
     }
-    .lawer-card-h4, .lawer-card-p{
-        width: 80%;
-        margin: auto;
+    .lawyer-card-h4, .lawyer-card-p{
+        width: 28rem;
+        margin:  auto;
+    }
+    .lawyer-card-p{
+        margin: .5rem auto;
     }
     .testimonials-title, .testimonials-span{
         margin: 0 1.5rem;
@@ -829,6 +917,30 @@ input[type=radio]:checked + label{
     }
     .arrow-slider:last-child{
         right: 42%;
+    }
+    /* footer */
+    .footer-title, .footer-map{
+        padding: .8rem 1.5rem;
+    }
+    .footer-map{
+        height: 25rem;
+    }
+    .footer-info{
+        padding: 2rem 1.5rem;
+    }
+    .footer-h3{
+        font-size: 1.1em;
+    }
+    .footer-phone, .footer-mail, .footer-social{
+        column-gap: .7rem;
+        font-size: 1em;
+    }
+    .footer-phone > svg, .footer-mail > svg, .footer-social > svg {
+        width: 1.1rem;
+        height: 1.5rem;
+    }
+    .footer-location > svg{
+        width: 1.3rem;
     }
 }
 @media (min-width: 50rem) {
@@ -855,12 +967,25 @@ input[type=radio]:checked + label{
         margin-right: -.5rem;
     }
     .nav-link{
+        position: relative;
         padding: .3rem .7rem;
         transition: .5s;
         border-radius: .4375rem;
     }
-    .nav-link:hover{
-        color: var(--first-color);
+    .nav-link::after{
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 50%;
+        left: 15%;
+        height: 40%;
+        width: 70%;
+        opacity: 0;
+        background-color: var(--first-color);
+        transition: opacity .5s;
+    }
+    .nav-link:hover::after{
+        opacity: 1;
     }
     /* home */
     .home{
@@ -993,29 +1118,29 @@ input[type=radio]:checked + label{
         line-height: 2.2rem;
         max-width: 33rem;
     }
-    .lawer-card{
+    .lawyer-card{
         margin: 0 2rem 3rem 2rem;
     }
-    .lawer-card-img{
+    .lawyer-card-img{
         height: 34rem;
         width: 60%;
     }
-    .lawer-card-name{
+    .lawyer-card-name{
         font-size: 1.2em;
         width: 60%;
         margin-top: 1rem;
     }
-    .lawer-card-list{
+    .lawyer-card-list{
         font-size: .95em;
         width: 60%;
     }
-    .lawer-card-list > li{
+    .lawyer-card-list > li{
         margin: 1rem 2rem;
     }
-    .lawer-card-h4, .lawer-card-p{
+    .lawyer-card-h4, .lawyer-card-p{
         width: 60%;
     }
-    .lawer-card-p{
+    .lawyer-card-p{
         margin-top: .5rem;
     }
     .testimonials-title, .testimonials-span{
@@ -1031,6 +1156,33 @@ input[type=radio]:checked + label{
     }
     #testimonialsContainer{
         padding: 0 2rem;
+    }
+    /* footer */
+    .footer{
+        display: flex;
+        justify-content: space-between;
+        column-gap: 2rem;
+        padding: 0 2rem;
+    }
+    .footer-title, .footer-map{
+        padding: 1rem 0 0 0;
+        font-size: 1.7em;
+    }
+    .footer-map{
+        width: 55vw;
+    }
+    .footer-info{
+        width: 45%;
+        background-color: var(--light-color);
+        color: var(--dark-color);
+        justify-content: center;
+        padding: 1.5rem 0 0 0;
+    }
+    .footer-h3{
+        font-size: 1.2em;
+    }
+    .footer-location{
+        max-width: 22rem;
     }
 }
 @media (min-width: 63rem) {
@@ -1142,14 +1294,14 @@ input[type=radio]:checked + label{
         line-height: 2.3rem;
         max-width: 30rem;
     }
-    .lawer-card{
+    .lawyer-card{
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin: 0 1.5rem 3rem 1.5rem;
         width: 95%;
     }
-    .lawer-card-img{
+    .lawyer-card-img{
         height: 32rem;
         width: 24rem;
         order: 2;
@@ -1161,20 +1313,20 @@ input[type=radio]:checked + label{
         width: auto;
         margin-right: -.5rem;
     }
-    .lawer-card-name{
+    .lawyer-card-name{
         font-size: 1.2em;
         width: 30rem;
         margin: 1rem 0;
     }
-    .lawer-card-list{
+    .lawyer-card-list{
         font-size: .95em;
         width: 35rem;
         margin: 0;
     }
-    .lawer-card-list > li{
+    .lawyer-card-list > li{
         margin: 1rem 2rem;
     }
-    .lawer-card-h4, .lawer-card-p{
+    .lawyer-card-h4, .lawyer-card-p{
         width: 34rem;
         margin-left: 1rem;
     }
@@ -1191,7 +1343,7 @@ input[type=radio]:checked + label{
         padding: 0 1.5rem;
     }
     .arrow-slider {
-        top: 95%;
+        top: 92%;
     }
     .arrow-slider:first-child{
         left: 1.5rem;
@@ -1203,6 +1355,17 @@ input[type=radio]:checked + label{
     .btn-wpp{
         right: 1.5rem;
         border-radius: 2rem;
+    }
+    /* footer */
+    .footer{
+        display: flex;
+        justify-content: space-between;
+        column-gap: 3rem;
+        padding: 0 1.5rem;
+    }
+    .footer-info{
+        justify-content: flex-end;
+        padding: 0 0 2rem 0;
     }
 }
 @media (min-width: 90rem) {
@@ -1272,30 +1435,30 @@ input[type=radio]:checked + label{
     .container-about-text{
         margin: 1rem 4rem;
     }
-    .lawer-card{
+    .lawyer-card{
         margin: 0 2rem 2rem 4rem;
     }
-    .lawer-card-img{
+    .lawyer-card-img{
         height: 36rem;
         width: 30rem;
         margin-right: 4rem;
     }
-    .lawer-card-name{
+    .lawyer-card-name{
         font-size: 1.3em;
     }
     .container-order-two{
         margin-right: 2rem;
     }
-    .lawer-card-list{
+    .lawyer-card-list{
         font-size: 1em;
     }
-    .lawer-card-list > li{
+    .lawyer-card-list > li{
         margin: 1.2rem 2rem;
     }
-    .lawer-card-h4, .lawer-card-p{
+    .lawyer-card-h4, .lawyer-card-p{
         width: 30rem;
     }
-    .lawer-card-p{
+    .lawyer-card-p{
         font-size: .95em;
         line-height: 1.2rem;
         margin-top: 1rem;
@@ -1312,10 +1475,7 @@ input[type=radio]:checked + label{
         margin: .5rem 4rem 2rem 4rem;
     }
     #testimonialsContainer{
-        padding: 0 3rem;
-    }
-    .arrow-slider{
-        top: 93%;
+        padding: 0 2rem 0 4rem;
     }
     .arrow-slider:first-child{
         left: 2rem;
@@ -1326,5 +1486,14 @@ input[type=radio]:checked + label{
     /* Whatsapp btn */
     .btn-wpp{
         right: 4rem;
+    }
+    /* footer */
+    .footer{
+        column-gap: 6rem;
+        padding: 0 4rem;
+    }
+    .footer-info{
+        justify-content: flex-end;
+        padding: 0 0 2rem 0;
     }
 }
