--- a/css/reset.css
+++ b/css/reset.css
@@ -60,14 +60,8 @@ h2 > strong::before{
         --secondary-color: #ffff00;
     }
 }
-
 /* reset  */
-html, body, div, span, iframe,
-h1, h2, h3, h4, h5, h6, p, a, img,
-small, strong, i, ol, ul, li, button,
-fieldset, form, label, legend,
-article, aside, figure,  footer, 
-header, nav, section, video, svg, path {
+* {
     margin: 0;
     padding: 0;
     border: 0;
@@ -87,7 +81,7 @@ li {
 html {
     scroll-behavior: smooth;
 }
-h1, h2, h3, h4, h5, h6, p, a, span, strong, i {
+h1, h2, h3, h4, h5, h6, p, a, span, strong {
     font-size: 1em;
     font-weight: inherit;
     font-style: inherit;
@@ -104,7 +98,7 @@ blockquote{
     border: none;
     box-sizing: border-box;
 }
-form, input , textarea, select, button, label {
+form, input, select, button, label {
     font-family: inherit;
     font-size: inherit;
     hyphens: auto;
